# EvoEngine-Demo

./: CMakeLists.txt  CMakeSettings.json  LICENSE
Resources/Example Projects/Galaxy/: Galaxy.eveproj  New Scene.evescene.evefilemeta
include/core/Planet/: PerlinNoiseStage.hpp  PlanetTerrain.hpp  PlanetTerrainSystem.hpp
src/app/: Application.cpp
src/core/Planet/: PerlinNoiseStage.cpp  PlanetTerrain.cpp  PlanetTerrainSystem.cpp  TerrainChunk.cpp
src/core/StarCluster/: StarClusterSystem.cpp
